--- a/style.css
+++ b/style.css
@@ -117,6 +117,13 @@
                 background-color: #CDFAD5;
             }
 
+            & .alert {
+                background-color: #FFCF96;
+                color: red;
+                font-weight: 700;
+                font-size: 24px;
+            }
+
             & .return {
                 height: 10%;
                 font-size: 24px;
@@ -219,18 +226,25 @@
                 width: 30%;
                 height: 100%;
                 background-color: #FDFFAE;
-                
-                & .equipment-slot {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-around;
-                    align-items: center;
-                    height: 30%;
-                }
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: center;
 
-                & img {
-                    height: 100px;
-                    width: 100px;
+                & .equipment-slot {
+                    width: 150px;
+                    height: 150px;
+                    background-color: #f0f0f0;
+                    border: 2px solid #ccc;
+                    border-radius: 5px;
+                    position: relative;
+                    font-size: 18px;
+                    height: 30%;
+            
+                    & img {
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
             }
 
@@ -284,8 +298,12 @@
         display: none;
         z-index: 1;
     }
-    
+
     & .item-slot:hover .item-data {
+        display: block;
+    }
+
+    & .equipment-slot:hover .item-data {
         display: block;
     }
 }
